# agentkinetics

./: .gitignore  CONTRIBUTING.md  LICENSE  POLICY.md  README.md  SECURITY.md  SETUP.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-product-suggestion.yml  config.yml
.github/workflows/: ci.yml  dependency-review.yml
docs/: ADR.md  architecture.md
src/agentkinetics/: __init__.py  app.py  bootstrap.py  config.py
src/agentkinetics/audit/: __init__.py  models.py  ports.py  service.py
src/agentkinetics/identity/: models.py  ports.py  service.py
src/agentkinetics/interfaces/: api.py  cli.py  product_ui.py
src/agentkinetics/memory/: __init__.py  models.py  ports.py  service.py
src/agentkinetics/orchestration/: __init__.py  langgraph_engine.py  models.py  ports.py  service.py
src/agentkinetics/policy/: __init__.py  models.py  ports.py  service.py
src/agentkinetics/shared/: __init__.py  errors.py  logging.py  rate_limit.py  time.py  types.py
src/agentkinetics/storage/: db.py  file_artifacts.py  schema.py  sqlite_gateway.py
src/agentkinetics/tools/: __init__.py  models.py  ports.py  service.py
tests/: test_api.py  test_services.py
