[project]
name = "agentkinetics"
version = "0.1.0"
description = "Offline-capable modular monolith for agent orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.10,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<10.0",
]
orchestration = [
  "langgraph>=1.0,<2.0",
]

[project.scripts]
agentkinetics-api = "agentkinetics.app:main"
agentkinetics-cli = "agentkinetics.interfaces.cli:main"

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
